--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -1,9 +1,9 @@
 .cardContainer {
   margin: 10px;
-  padding: 15px 18px;
+  /* padding: 15px 18px; */
   border: 1px solid black;
   border-radius: 10px;
-  width: auto;
+  width: 274px;
 
   position: relative;
 }
