--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* src/index.css */
 
 body {
-  font-family: sans-serif;
+  font-family: "Manrope", sans-serif;
   line-height: 1.5;
 }
 
@@ -24,4 +24,11 @@ ol {
 img {
   display: block;
   max-width: 100%;
+}
+
+@font-face {
+  font-family: "Manrope";
+  src: local("Manrope"),
+    url("../src/fonts/Manrope-Regular.ttf") format ("truetype");
+  font-weight: regular;
 }
