--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -1,25 +1,34 @@
 .cardContainer {
   margin: 10px;
   /* padding: 15px 18px; */
-  border: 1px solid black;
-  border-radius: 10px;
   width: 274px;
-
-  position: relative;
 }
 
 .cardContainer__img {
   object-fit: cover;
   width: 100%;
+  object-position: center;
+}
+
+.imgContainer {
+  background-image: linear-gradient(
+    180deg,
+    rgba(18, 20, 23, 0.5) 2.5%,
+    rgba(18, 20, 23, 0) 41.071%
+  );
+  border: 1px solid black;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
 }
 
 .btnHeart {
   position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
+  top: 1rem;
+  right: 1rem;
 
   background-color: transparent;
-  color: white;
+  color: #3470ff;
   border: none;
   cursor: pointer;
 }
