added css from containerInfo

--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -38,6 +38,12 @@
   align-items: center;
 }
 
+.containerInfo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .cardRentalPrice {
   margin-left: auto;
 }
