--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,18 @@ img {
     url("../src/fonts/Manrope-Regular.ttf") format ("truetype");
   font-weight: regular;
 }
+
+p {
+  position: relative;
+}
+
+p::after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 1px;
+  top: 0;
+  right: -10px;
+  /* background-color: rgba(18, 20, 23, 0.1); */
+  background-color: red;
+}
