--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /* src/index.css */
+@import "node_modules/modern-normalize/modern-normalize.css";
 
 body {
   font-family: "Manrope", sans-serif;
@@ -43,7 +44,7 @@ p::after {
   height: 100%;
   width: 1px;
   top: 0;
-  right: -10px;
+  right: -6px;
   /* background-color: rgba(18, 20, 23, 0.1); */
   background-color: red;
 }
